--- a/velociraptor.yml
+++ b/velociraptor.yml
@@ -1,3 +1,3 @@
 scripts:
   dev: packup index.html --static-dir static
-  build: deno fmt && rm -rf dist && packup build index.html --static-dir static --dist-dir dist
+  build: rm -rf dist && packup build index.html --static-dir static --dist-dir dist
