--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build
         working-directory: ./
         run: |
-          deno run -A https://deno.land/x/packup@v0.2.2/cli.ts
+          deno install -A https://deno.land/x/packup@v0.2.2/cli.ts > /dev/null
           vr build
 
       - name: Deploy
